adopted service website

--- a/web/index.html
+++ b/web/index.html
@@ -5,8 +5,8 @@
 <title>FITS Service</title>
 </head>
 <body>
-<h2>FITS Service</h2>
-<p>The FITS Service is a wrapper for the <a
+<h2>TME Service</h2>
+<p>The TME Service is currently a wrapper for the <a
 	href="http://code.google.com/p/fits/">File Information Tool Set
 (FITS)</a>. FITS is developed by the <a href="http://hul.harvard.edu/ois/">Harvard
 University Library Office for Information Systems</a> for use in its <a
@@ -24,7 +24,7 @@ Service (DRS)</a>. The FITS Service is build by <a
 		<dd>The locator of the file to examine. This may be a local path
 		in the servers filesystem or a HTTP URL.</dd>
 		<dt>returns</dt>
-		<dd>FITS output XML.</dd>
+		<dd>XML document containing technical metadata (FITS output XML).</dd>
 	</dl>
 	</dd>
 </dl>
