--- a/web/index.html
+++ b/web/index.html
@@ -6,18 +6,18 @@
 </head>
 <body>
 <h2>TME Service</h2>
-<p>The TME Service is currently a wrapper for the <a
+<p>The TME (Technical Metadata Extractor) Service is currently a wrapper for the <a
 	href="http://code.google.com/p/fits/">File Information Tool Set
 (FITS)</a>. FITS is developed by the <a href="http://hul.harvard.edu/ois/">Harvard
 University Library Office for Information Systems</a> for use in its <a
 	href="http://hul.harvard.edu/ois/systems/drs/">Digital Repository
-Service (DRS)</a>. The FITS Service is build by <a
+Service (DRS)</a>. The TME Service is build by <a
 	href="http://www.fiz-karlsruhe.de">FIZ Karlsruhe</a> for use in the <a
 	href="http://www.eSciDoc.org">eSciDoc Project</a>.</p>
 
 <h3>Usage</h3>
 <dl>
-	<dt><a href="examine">examine</a></dt>
+	<dt><a href="examine?path=">examine</a></dt>
 	<dd>Examine a given file and return technical metadata XML.
 	<dl>
 		<dt>path</dt>
